fix index.html, fix overflow in settings
request-checks: true

--- a/src/main/client/ts/templates/GameController/GameController.module.scss
+++ b/src/main/client/ts/templates/GameController/GameController.module.scss
@@ -22,6 +22,7 @@
 	height: 100%;
 	padding: 6% 2%;
 	background-color: var(--ghostboard-square-color);
+	overflow: hidden;
 
 	@media (max-width: 925px) {
 		flex-direction: column;
